--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 # Add your requirements here like:
-# numpy
-# scipy>=0.9
-django
+django==1.10.2
+djangorestframework==3.4.7
+django-extensions==1.7.4
+Keras==1.1.0
+matplotlib==1.5.3
+pandas==0.19.0
+git+git://github.com/totalgood/keras.git@softexp#egg=keras
+
